release/1.19/VERSION.md
# 1.19

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.19```   |
| Release Time   | ```2022-06-07T09:42:18+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.19```   |
| sha1   | ```a9c8b05a8082a65678beda6dfa2b8f21fa627bce```   |
| size   | ```385608```   |
| total size  | ```557023211```  |
| url       | ```https://piston-meta.mojang.com/v1/packages/a9c8b05a8082a65678beda6dfa2b8f21fa627bce/1.19.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```c0898ec7c6a5a2eaa317770203a1554260699994```   |
| size   | ```21462385```   |
| url       | ```https://piston-data.mojang.com/v1/objects/c0898ec7c6a5a2eaa317770203a1554260699994/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```e00c4052dac1d59a1188b2aa9d5a87113aaf1122```   |
| size   | ```45538778```   |
| url       | ```https://piston-data.mojang.com/v1/objects/e00c4052dac1d59a1188b2aa9d5a87113aaf1122/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```java-runtime-gamma```   |
| version   | ```17```   |